Final R1 resume without PRML

--- a/resume.tex
+++ b/resume.tex
@@ -140,7 +140,7 @@
     \item Worked in the Quant Research Data Team of Optiver Delta1
     \item Added functionality to create TCP/IP filters from session configuration files for packet parsers and optimised them for performance.
     \item Added functionality to convert timestamps across timezones, accounting for Daylight Saving Time changes 
-    \item Replaces a saturated Postgres database with a OneTick database, optimising the schema based on past SQL queries to minimise query time.
+    \item Replaces a saturated Postgres database with a OneTick database, and optimised its schema based on past SQL queries to minimise query time.
 \end{itemize}
 \vspace{3pt}
 
@@ -181,7 +181,7 @@
 \small
  \begin{itemize}[ leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
-  \item \textbf{Rating 1806} \textcolor{blue}{Expert} on Codeforces
+  \item \textbf{Rated 1806} \textcolor{blue}{Expert} on Codeforces
 %   \item Maximum Rating 1653 \textcolor{blue}{(3 \includegraphics[scale=0.03]{bluestar.png})} on CodeChef
   \item \textbf{ICPC 2022} - \textbf{AIR 151} and \textbf{Institute Rank 7} in Kanpur Qualifiers
 \item \textbf{AIR 3} in Shaastra CP Potpourri (Mixed-bag coding contest) \\ \small {\textit{[Shaastra is Asia's largest student-run Techfest]}} 
@@ -248,8 +248,8 @@
 \begin{itemize}[leftmargin=\myMargin]
 \setlength \itemsep{-0.2em}
 \item Awarded Sri V Ramachandran Prize for \textbf{Highest CGPA} in Semesters 3 \& 4 of B.Tech and Dual Degree in Computer Science 
-\item Secured \textbf{AIR 5} in JEE Mains '19 out of 1 million students  %\hfill {[20XX]}%
-\item Secured \textbf{AIR 161} in JEE Advanced '19\hfill
+\item Secured \textbf{AIR 5} in JEE Mains '21 out of 1 million students  %\hfill {[20XX]}%
+\item Secured \textbf{AIR 161} in JEE Advanced '21\hfill
 \item Secured \textbf{AIR 10} in Indian Statistical Institute Exam
 \item Secured \textbf{AIR 21} in INChO and attended Orientation Camp for \\ International Chemistry Olympiad
 \item Awarded KVPY Fellowship '21 with \textbf{AIR 338}
