--- a/resume.tex
+++ b/resume.tex
@@ -108,7 +108,7 @@
 
 \noindent
 \resheading{\subheadingfont{EDUCATION}} 
-\vspace{-0.1cm}
+\vspace{-0.05cm}
 \\
 \noindent
 \projecttopic{B. Tech CSE \big \vert \hspace{3pt} CGPA 9.94/10} \hfill \mycal{Jul '21 - Present} 
@@ -137,10 +137,10 @@
 \projecttopic{Software Internship at Optiver Amsterdam} \hfill \mycal{May'24 - Jul'24} 
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
-    \item Worked in the Quant Research Data Team of Optiver Delta1
-    \item Added functionality to create TCP/IP filters from session configuration files for packet parsers and optimised them for performance.
-    \item Added functionality to convert timestamps across timezones, accounting for Daylight Saving Time changes 
-    \item Replaces a saturated Postgres database with a OneTick database, and optimised its schema based on past SQL queries to minimise query time.
+    \item Worked in the \textbf{Quant Research Data Team} of Optiver Delta1
+    \item Added functionality to \textbf{create TCP/IP filters} from session configuration files for packet parsers and \textbf{optimised} them for performance.
+    \item Added functionality to \textbf{convert timestamps} across timezones, accounting for Daylight Saving Time changes 
+    \item \textbf{Replaced a saturated time-series Postgres database} with a OneTick database, and \textbf{optimised its schema} based on past SQL queries to \textbf{minimise query time}.
 \end{itemize}
 \vspace{3pt}
 
@@ -185,8 +185,7 @@
 %   \item Maximum Rating 1653 \textcolor{blue}{(3 \includegraphics[scale=0.03]{bluestar.png})} on CodeChef
   \item \textbf{ICPC 2022} - \textbf{AIR 151} and \textbf{Institute Rank 7} in Kanpur Qualifiers
 \item \textbf{AIR 3} in Shaastra CP Potpourri (Mixed-bag coding contest) \\ \small {\textit{[Shaastra is Asia's largest student-run Techfest]}} 
-    \item { \textbf{Global Rank 9} in CodeChef Starters 96} $\vert$ { \textbf{Global Rank 231} in Codeforces Round 881} $\vert$ \textbf{Rank 2} in Republic Day Contest '24 and \textbf{Rank 3} in Endgame Contest organised by Programming Club, IITM 
-    \item {1st place in Inter-School Java Competition in Mumbai}
+    \item { \textbf{Global Rank 9} in CodeChef Starters 96} $\vert$ { \textbf{Global Rank 231} in Codeforces Round 881} $\vert$ \textbf{Global Rank 373} in Google Farewell Round $\vert$ \textbf{Rank 2} in Republic Day Contest '24 and \textbf{Rank 3} in Endgame Contest organised by Programming Club, IITM
   \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -202,7 +201,6 @@
     \item Data Structures
     \item Computer Architecture
     \item Theory of Computation
-    \item Object Oriented Programming
     \item Compiler Design
     \item Operating Systems
     \item Functional \& Logical Programming
@@ -217,7 +215,7 @@
     \item Linear Programs \& Optimisation $\dagger$ 
     \item Linear Algebra $\dagger$ \\
     \noindent
-     $\dagger$ - Graduate Level Course \\ $*$ - Ongoing
+     $\dagger$ - Graduate Course \\ $*$ - Ongoing
 \end{itemize}
 \end{multicols}
 
@@ -225,10 +223,10 @@
  
 \noindent
 \resheading{\subheadingfont{SOFTWARE SKILLS}}
-\vspace{-0.35cm}
+\vspace{-0.3cm}
  \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
-  \item \textbf{Languages}: C++, C, HDL (Verilog), OCaml, Python, Java, Prolog, SQL, x86, MIPS and 8085 ASM, \LaTeX, HTML \& CSS, R
+  \item \textbf{Languages}: C++, C, HDL (Verilog), OCaml, Python, Java, Prolog, Flex, Yacc, SQL, x86, MIPS and 8085 ASM, \LaTeX, HTML \& CSS, R
   \item \textbf{Tools}: CMake, Make, git, gdb/lldb, TI CCS, AutoCAD, GTKWave 
 \item \textbf{Libraries}: TI RTOS, Boost, Xerces, ESP32 libraries, Python libraries
   \end{itemize}
@@ -246,14 +244,14 @@
 \noindent
 \resheading{\subheadingfont{SCHOLASTIC ACHIEVEMENTS}}
 \begin{itemize}[leftmargin=\myMargin]
-\setlength \itemsep{-0.2em}
+\setlength \itemsep{-0.1em}
 \item Awarded Sri V Ramachandran Prize for \textbf{Highest CGPA} in Semesters 3 \& 4 of B.Tech and Dual Degree in Computer Science 
 \item Secured \textbf{AIR 5} in JEE Mains '21 out of 1 million students  %\hfill {[20XX]}%
 \item Secured \textbf{AIR 161} in JEE Advanced '21\hfill
 \item Secured \textbf{AIR 10} in Indian Statistical Institute Exam
 \item Secured \textbf{AIR 21} in INChO and attended Orientation Camp for \\ International Chemistry Olympiad
-\item Awarded KVPY Fellowship '21 with \textbf{AIR 338}
-\item Winner of Mimamsa '22 at IISER Pune $\vert$ 4$^{th}$ place in Chemenigma '22 at IISC Bangalore $\vert$ Won Silver Medal in Homi Bhabha Science Competition (conducted in Maharashtra)
+\item Awarded KVPY Fellowship '20 with \textbf{AIR 338}
+\item Winner of Mimamsa '22 at IISER Pune $\vert$ 4$^{th}$ place in Chemenigma '22 at IISC Bangalore $\vert$ Won Silver Medal in Homi Bhabha Science Competition (conducted in Maharashtra) \hfill \textbf{AIR} $\leftarrow$ All India Rank
 \end{itemize} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -271,7 +269,7 @@
     \item Analysed the effect of compression on CSI data and its tradeoffs on the Network Bandwidth, Energy Consumption \& Sensing Accuracy.
     \item This work has been accepted in \textbf{\href[]{https://www.aiot-workshop.site/}{AIoT workshop at MobiHoc '24} organised in Athens, Greece.} 
 \end{itemize}
-\vspace{3pt} 
+\vspace{5pt} 
 \noindent
 \hrulefill \\ [-0.45cm]
 \projecttopic{Custom Protocol Headers for Network Support}   \hfill \textcolor{projDescColor}{\textit{P4, Python}}\\[0.1cm]
@@ -342,8 +340,8 @@
 \vspace{-0.05cm}
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
-    \item Implemented a CPU with \textbf{Register file} and \textbf{ALU} with instructions to perform Arithmetic 
-    and Logical operations on both 8-bit integers and  12-bit floating-point numbers
+    \item Implemented a CPU with \textbf{Register file} and \textbf{ALU} supporting Arithmetic 
+    and Logical instructions on both 8-bit integers and  12-bit floats
     \item Built a combinational 8-bit CPU with structural gate-level Verilog 
 \end{itemize}
 \vspace{5pt}
